[workspace]
resolver = "2"
members = ["client", "server"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.6", features = ["ws", "json"] }
tokio = { version = "1.32", features = ["full"] }
tokio-util = "0.7"
anyhow = "1.0"
futures-util = "0.3"
rand = "0.8"
dotenv = "0.15"
envy = "0.4"