[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
axum = { version = "0.6", features = ["ws", "json"] }
tokio = { version = "1.26", features = ["full"] }
tokio-util = "0.7"
dotenv = "0.15"
envy = "0.4"
anyhow = "1.0"
futures-util = "0.3"
rand = "0.8"