[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
futures-util.workspace = true
rand.workspace = true
dotenv.workspace = true
envy.workspace = true